--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: golangci/golangci-lint-action@v2.5.2
-      - uses: pre-commit/action@v2.0.2 --reuse
+      - uses: pre-commit/action@v2.0.3
