--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,3 +15,5 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
+          skip-pkg-cache: true
+          skip-build-cache: true
