--- a/homework-3/shop/descriptions/shop.yaml
+++ b/homework-3/shop/descriptions/shop.yaml
@@ -72,8 +72,8 @@ paths:
         400:
           description: Invalid price range
     post:
-      summary: "Add a new item to the store"
-      operationId: "CreateItem"
+      summary: Add a new item to the store
+      operationId: CreateItem
       requestBody:
         content:
           application/json:
@@ -94,8 +94,8 @@ paths:
         - api_key: []
   /items/upload_image:
     post:
-      summary: "uploads an image"
-      operationId: "uploadFile"
+      summary: uploads an image
+      operationId: uploadFile
       requestBody:
         required: true
         content:
@@ -105,10 +105,10 @@ paths:
               properties:
                 additionalMetadata:
                   type: string
-                  description: "Additional data to pass to server"
+                  description: Additional data to pass to server
                 file:
                   type: object
-                  description: "file to upload"
+                  description: file to upload
       responses:
         200:
           description: successful operation
@@ -364,6 +364,6 @@ components:
           default: false
   securitySchemes:
     ApiKeyAuth:
-      type: "apiKey"
-      in: "header"
-      name: "api_key"
+      type: apiKey
+      in: header
+      name: api_key
